_sass/toggle.scss
html {
    --button: #FFBD07;
    --mainBg: #fff;
    --textColor: #232323;
    --cardBg: #ffffff;
  }
  
  html[data-theme='dark'] {
    --button: #7345df;
    --mainBg: #2f2f2f;
    --textColor: #fff;
    --cardBg: #5f5f5f;
  }
  
  h1 {
    font-family: 'Poppins', sans-serif;
    font-weight: 300;
    color: var(--textColor);
  }
  
  input[type=checkbox] {
    height: 0;
    width: 0;
    visibility: hidden;
  }
  
  label {
    cursor: pointer;
    text-indent: -9999px;
    width: 55px;
    height: 30px;
    background: var(--button);
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    -webkit-border-radius: 100px;
    -moz-border-radius: 100px;
    border-radius: 100px;
    position: relative;
  }
  
  label:after {
    content: '';
    background: #fff;
    width: 20px;
    height: 20px;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    position: absolute;
    top: 5px;
    left: 4px;
   transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
  }
  
  input:checked + label {
    background: var(--button);
  }
  
  input:checked + label:after {
    left: calc(100% - 5px);
    -webkit-transform: translateX(-100%);
    -moz-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    -o-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  

